added 3 clusters