@@ -37,7 +37,7 @@ class ForecastServiceTest {
         // Mock das Verhalten des Handlers: Forecast in ForecastRequest setzen
         doAnswer(invocation -> {
             ForecastRequest req = invocation.getArgument(0);
-            req.setForecast(new Forecast(0.75f, new Municipality(municipalityId, new Coordinates(1, 2))));
+            req.setForecast(new Forecast(0.75f, new Municipality(municipalityId, new Coordinates(1, 2)), new Municipality(municipalityId, new Coordinates(1, 2))));
             return null;
         }).when(headHandler).handle(any(ForecastRequest.class));
 
@@ -57,14 +57,14 @@ class ForecastServiceTest {
         Municipality munA = new Municipality("A", new Coordinates(1f, 2f));
         Municipality munB = new Municipality("B", new Coordinates(3f, 4f));
 
-        MunicipalityToCluster mapping1 = new MunicipalityToCluster(munA.getName(), "cluster1");
-        MunicipalityToCluster mapping2 = new MunicipalityToCluster(munB.getName(), "cluster2");
+        MunicipalityToCluster mapping1 = new MunicipalityToCluster(munA.getName(), "cluster1", "cluster3");
+        MunicipalityToCluster mapping2 = new MunicipalityToCluster(munB.getName(), "cluster2", "cluster4");
         when(municipalityToClusterPort.getAllMunicipalityToCluster()).thenReturn(List.of(mapping1, mapping2));
 
         ForecastService spyService = spy(forecastService);
 
         // getForecast() für A funktioniert
-        Forecast forecastA = new Forecast(1.0f, munA);
+        Forecast forecastA = new Forecast(1.0f, munA, munA);
         doReturn(forecastA).when(spyService).getForecast(model, "A");
 
         // getForecast() für B wirft Exception → soll zu null führen
@@ -75,6 +75,6 @@ class ForecastServiceTest {
 
         // Assert
         assertEquals(1, result.size());
-        assertEquals("A", result.get(0).getMunicipality().getName());
+        assertEquals("A", result.getFirst().getMunicipality().getName());
     }
 }
